# ChangeLog for dev-java/ant-apache-bsf
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-bsf/ChangeLog,v 1.24 2009/05/15 22:20:39 caster Exp $

  15 May 2009; Vlastimil Babka <caster@gentoo.org>
  -ant-apache-bsf-1.7.0-r1.ebuild:
  Removing ant 1.7.0, bug #261563.

  11 Mar 2009; Markus Meier <maekke@gentoo.org>
  ant-apache-bsf-1.7.1-r1.ebuild:
  x86 stable, bug #261560

  09 Mar 2009; Kenneth Prugh <ken69267@gentoo.org>
  ant-apache-bsf-1.7.1-r1.ebuild:
  amd64 stable, bug #261560

  07 Jan 2009; Brent Baude <ranger@gentoo.org>
  ant-apache-bsf-1.7.1-r1.ebuild:
  Marking ant-apache-bsf-1.7.1-r1 ppc64 for bug 250466

  21 Dec 2008; Markus Meier <maekke@gentoo.org> ant-apache-bsf-1.7.1.ebuild:
  x86 stable, bug #250466

  20 Dec 2008; Kenneth Prugh <ken69267@gentoo.org>
  ant-apache-bsf-1.7.1.ebuild:
  amd64 stable, bug #250466

  20 Dec 2008; nixnut <nixnut@gentoo.org> ant-apache-bsf-1.7.1.ebuild:
  Stable on ppc wrt bug 250446

  09 Dec 2008; Vlastimil Babka <caster@gentoo.org>
  ant-apache-bsf-1.7.1.ebuild:
  Actually put -r0 back to EAPI=1.

*ant-apache-bsf-1.7.1-r1 (09 Dec 2008)

  09 Dec 2008; Vlastimil Babka <caster@gentoo.org>
  +ant-apache-bsf-1.7.1-r1.ebuild:
  Put -r0 back to EAPI=1 and do the change to EAPI=2 in revbump, for faster
  stabilization.

  27 Sep 2008; Petteri Räty <betelgeuse@gentoo.org>
  ant-apache-bsf-1.7.1.ebuild:
  Use EAPI 2 use dependencies instead of built_with_use warnings.

*ant-apache-bsf-1.7.1 (14 Jul 2008)

  14 Jul 2008; Vlastimil Babka <caster@gentoo.org>
  +ant-apache-bsf-1.7.1.ebuild:
  Version bump, bug #231776.

  01 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  ant-apache-bsf-1.7.0-r1.ebuild:
  Change inherit order to get right description and not from eutils.eclass,
  bug #180570 by Jakub Moc.

  28 May 2007; Vlastimil Babka <caster@gentoo.org>
  ant-apache-bsf-1.7.0-r1.ebuild:
  Update pkg_postinst messages.
