@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-apache-bsf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-bsf/ChangeLog,v 1.24 2009/05/15 22:20:39 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-bsf/ChangeLog,v 1.25 2009/10/04 20:53:38 caster Exp $
+
+  04 Oct 2009; Vlastimil Babka <caster@gentoo.org>
+  -ant-apache-bsf-1.7.1.ebuild:
+  Remove old revision using built_with_use.
 
   15 May 2009; Vlastimil Babka <caster@gentoo.org>
   -ant-apache-bsf-1.7.0-r1.ebuild:
